# BRIDGE

./: .gitmodules  README.md  add_release_time.py  compare_json.py  compute_baseline.py  cybench_human_time_llm_estimate.py  fit_irt.py  index.html  merge_human_minutes.py  model_mapping.py  parse_cybench_logs.py  prepare_irt.py  prepare_sparse_pyirt.py  pyproject.toml  results_analysis.ipynb  run_cybench_analysis.py  run_pipeline.sh  run_swebench_baseline_analysis.py  swebench_human_time_llm_estimate.py  two_param_logistic.py
data/: all_a_pyirt.jsonl  combined_human_minutes.jsonl  cybench_fst_master.jsonl  cybench_human_minutes_by_task.jsonl  cybench_normalized_results.jsonl  cybench_time_estimations_google_gemini-3-pro-preview.jsonl  cybench_time_estimations_openai_gpt-5.2-2025-12-11.jsonl  gdpval_normalized_results.jsonl  human_minutes_by_task.jsonl  mlebench_normalized_results.jsonl  model_run_mapping.json  swe_a_pyirt.jsonl  swebench_normalized_results.jsonl  swebench_results.jsonl  swebench_time_estimations_gemini-3-pro-preview-swe-bench.jsonl  swebench_time_estimations_gpt-5_2-2025-12-11-swe-bench.jsonl
data/cybench_data_by_challenges/glacier_missing_bits/: gemini-3-pro-preview_fail_MissingBits_run_log.json  gpt-4o-mini_fail_MissingBits_run_log.json  gpt-5-mini_fail_MissingBits_run_log.json  gpt-5-nano_fail_MissingBits_run_log.json  gpt-5.1_fail_MissingBits_run_log.json  o3_fail_MissingBits_run_log.json
params/: all_a_pyirt.csv  all_a_pyirt_abilities.csv  all_a_pyirt_baseline.csv  all_a_pyirt_baseline_abilities.csv
static/: style.css
(+163 files in other folders)
