[project]
name = "BRIDGE"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.18.0",
    "pandas>=2.3.3",
    "py-irt>=0.6.6",
    "pyro-ppl>=1.9.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
